<resources>

    <!--Application-->
    <string name="menu_about">About</string>
    <string name="menu_sign_out">Sign Out</string>

    <!--Settings-->
    <string name="title_activity_settings">Settings</string>

    <!--Auth-->
    <string name="auth_failed">Sign in failed.</string>
    <string name="user_id">userId</string>

    <!--EditItem-->
    <string name="title_activity_edit_item">Edit</string>
    <string name="menu_take_photo">Take Photo</string>
    <string name="image_capture_failed">Image capture failed</string>
    <string name="menu_select_image">Select Image</string>
    <string name="menu_delete_item">Delete Item</string>
    <string name="delete_item_success">Item Deleted</string>
    <string name="delete_item_undo_success">Item Restored</string>
...
    <string name="edit_item_image_description">Item Image</string>
    <string name="edit_item_remove_image_button">Remove Image</string>
    <string name="title_uploading_or_removing_image">Uploading or Removing Image</string>
    <string name="press_back_while_editing">Press done to save or select delete from the options menu.</string>

    <!--Items-->
    <string name="title_activity_items">Items</string>
    <string name="no_items">No items.</string>
    <string name="expire_button_description">Expire item</string>
    <string name="item_expired">Item Expired</string>
    <string name="undo">Undo</string>
    <string name="item_unexpired">Item Revived</string>
    <string name="item_image">Item image</string>
    <string name="menu_sort">Sort</string>
...
    <string name="note">Note:&#160;</string>
    <string name="item_image_description">Item Image:&#160;</string>
    <string name="empty_value">-</string>
    <string name="date_format">dd/MMMM/yy</string>

    <!--About-->
    <string name="title_activity_about">About</string>
    <string name="title_item_reaper">Item Reaper</string>
    <string name="version">Version 1.0.7</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="privacy_policy"><a href="https://mvescovo.github.io/item-reaper/">Privacy Policy</a>.</string>
    <string name="title_attributions">Attributions</string>
    <string name="reaper_icon_attribution">Reaper and scythe icons made by Loc. Available on <a href="http://game-icons.net">http://game-icons.net</a>.</string>
...
