<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_take_photo"
        android:icon="@drawable/ic_add_a_photo"
        android:title="@string/menu_take_photo"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_select_image"
        android:icon="@drawable/ic_image"
        android:title="@string/menu_select_image"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete_item"
...
