...
        android:id="@+id/contentFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.michaelvescovo.android.itemreaper.util.FABAwareScrollingViewBehavior"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/edit_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/keyline_1"
        android:contentDescription="@string/add_item"
        app:srcCompat="@drawable/ic_add" />
...
